tests/conformance/fail/types/i32_plus_string.ny
fn main() {
    let x: i32 = "not-a-number"
}
